--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Test</h1>
     <h2>Liat test</h2>
+    <h2>Viki test</h2>
   </body>
   <script src="script.js"></script>
 </html>
