--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <h1>Test</h1>
     <h2>Liat test</h2>
-    <h2>Viki test</h2>
+    <h3>Andy Test</h3>
+    <h4>Viki Test</h4>
   </body>
   <script src="script.js"></script>
 </html>
