--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <title>The light bulb</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <h1>Test</h1>
-    <h2>Liat test</h2>
-    <h3>Andy Test</h3>
-    <h4>Viki Test</h4>
-  </body>
+  <body></body>
   <script src="script.js"></script>
 </html>
