--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>The light bulb</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="scene1"></section>
+  </body>
   <script src="script.js"></script>
 </html>
