modal working and refresh button works

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   </head>
   <body>
     <section class="scene1"></section>
+
+    <div class="modal-bg hidden">
+      <div class="modal">
+        <button onClick="history.go(0);" class="restart">&#8634</button>
+        <button class="next"> &#x21E8</button>
+      </div>
+    </div>
   </body>
   <script src="script.js"></script>
 </html>
