fixed buttons in the modal and added timeline

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
     <div class="modal-bg hidden">
       <div class="modal">
-        <button onClick="history.go(0);" class="restart">&#8634</button>
-        <button class="next"> &#x21E8</button>
+        
+        <div onClick="history.go(0);" class="restart"><h1>&#8634</h1></div>
+        <section class="timeline"></section>
+        <div class="next"><h1>&#x21E8</h1></div>
       </div>
     </div>
   </body>
