fixed buttons again

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
     <div class="modal-bg hidden">
       <div class="modal">
-        <button onClick="history.go(0);" class="restart">&#8634</button>
+        <div onClick="history.go(0);" class="restart">&#8634</div>
         <div class="content">
 
         </div>
-        <button class="next"> &#x21E8</button>
+        <div class="next"> &#x21E8</div>
        
       </div>
     </div>
