made timeline work on click and show introduction

--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
     </template>
 
     <template class="timeline">
+        <div id="timeline-svg"></div>
         <div class="timeline-text">
-        <p>Light was always a part of our history , from the revolutionary discovery of the fire to its use on candles and gas lamps, which presented their benefits and hazards  but not as futuristic as the electric light bulb. </p>
+            <p></p>
     </div>
     <div class="timeline-image">
+        <p></p>
     </div>
     </template>
 
