--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <img src="" alt="">
     </template>
 
-
+    <div onClick="history.go(0);" class="restart2">&#8634</div>
   </body>
   <script src="script.js"></script>
 </html>
