fetched the power-plant svg

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 
     <template class="technology">
         <p>In 1882 the world's first coal-fired public power station, the Edison Electric Light Station, was built in London, a project of Thomas Edison organized by Edward Johnson. In September 1882 in New York, the Pearl Street Station was established by Edison to provide electric lighting in the lower Manhattan Island area. Plugs and sockets for portable appliances started becoming available in the 1880s.</p>
+        <section class="power-plant"></section>
         <img src="" alt="">
     </template>
 
