--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
     <template class="work-impact">
         <p>The 24 hours working time was possible since the light bulb became more popular and we became less dependent on the time of the day. The increase of the working hours had a huge impact in the economy since more working time meant more productivity for companies and more money flowing in the economy. Increased luminescence in the workplace helped make it easier for laborers to see potential workplace hazards, thus preventing accidents and making workplaces safer.</p>
+        <section class="factory-bank"></section>
         <img src="" alt="">
     </template>
 
