--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <template class="process-curiosity">
         <p>Incandescent lamps make light by using electricity to heat a thin strip of material, called filament, until it gets hot enough to glow.</p>
-        <img src="" alt="">
+        <section class="process-lamp"></section>
     </template>
 
     <template class="process-conclusion">
@@ -60,7 +60,6 @@
 
     <template class="congratulations-message">
         <p>Edison discovered that when using bamboo as the filament, the bulb could burn for 1200 hours! The bamboo became the standard filament for the next 10 years.</p>
-        <img src="" alt="">
     </template>
 
     <template class="work-impact">
