--- a/index.html
+++ b/index.html
@@ -1,85 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The light bulb</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
 
-    <section class="scene1"></section>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>The light bulb</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-    <div class="modal-bg hidden">
-      <div class="modal">
-        <div onClick="history.go(0);" class="restart">&#8634</div>
-        <div class="content">
+<body>
 
-        </div>
-        <div class="next"> &#x21E8</div>
-       
+  <section class="scene1"></section>
+
+  <div class="modal-bg hidden">
+    <div class="modal">
+      <div onClick="history.go(0);" class="restart">&#8634</div>
+      <div class="content">
+
       </div>
+      <div class="next"> &#x21E8</div>
+
     </div>
+  </div>
 
 
 
 
-    <template class="timeline-intro">
-        <p>Light was always a part of our history , from the revolutionary discovery of the fire to its use on candles and gas lamps, which presented their benefits and hazards  but not as futuristic as the electric light bulb. </p>
-    </template>
+  <template class="timeline-intro">
+    <p>Light was always a part of our history , from the revolutionary discovery of the fire to its use on candles and
+      gas lamps, which presented their benefits and hazards but not as futuristic as the electric light bulb. </p>
+  </template>
 
-    <template class="timeline">
-        <div id="timeline-svg"></div>
-        <div class="timeline-text">
-            <p></p>
+  <template class="timeline">
+    <div id="timeline-svg"></div>
+    <div class="timeline-text">
+      <p></p>
     </div>
     <div class="timeline-image">
     </div>
-    </template>
+  </template>
 
-    <template class="process-intro">
-        <p>Between 1878 and 1880, Edison and his associates worked seriously to develop the light bulb. They worked on at least 3000 different theories for developing an efficient incandescent lamp.</p>
-        <img src="" alt="">
-    </template>
+  <template class="process-intro">
+    <p>Between 1878 and 1880, Edison and his associates worked seriously to develop the light bulb. They worked on at
+      least 3000 different theories for developing an efficient incandescent lamp.</p>
+    <img src="" alt="">
+  </template>
 
-    <template class="process-curiosity">
-        <p>Incandescent lamps make light by using electricity to heat a thin strip of material, called filament, until it gets hot enough to glow.</p>
-        <section class="process-lamp"></section>
-    </template>
+  <template class="process-curiosity">
+    <p>Incandescent lamps make light by using electricity to heat a thin strip of material, called filament, until it
+      gets hot enough to glow.</p>
+    <section class="process-lamp"></section>
+  </template>
 
-    <template class="process-conclusion">
-        <p>By 1879 Edison managed to create his first electric light, which burned for a few short hours. In order to improve the bulb, Edison tested over 6000 materials for the filament!</p>
-    </template>
+  <template class="process-conclusion">
+    <p>By 1879 Edison managed to create his first electric light, which burned for a few short hours. In order to
+      improve the bulb, Edison tested over 6000 materials for the filament!</p>
+  </template>
 
-    <template class="filament-game">
-        <h2>Help Thomas Edison find the best material for the filament in the light bulb!</h2>
-        <div class="gameContainer">
-        <section class="lamp"></section>
-        <section class="bubbles"></section>
-      </div>
-    </template>
+  <template class="filament-game">
+    <h2>Help Thomas Edison find the best material for the filament in the light bulb!</h2>
+    <div class="gameContainer">
+      <section class="lamp"></section>
+      <section class="bubbles"></section>
+    </div>
+  </template>
 
-    <template class="congratulations-message">
-        <p>Edison discovered that when using bamboo as the filament, the bulb could burn for 1200 hours! The bamboo became the standard filament for the next 10 years.</p>
-    </template>
+  <template class="congratulations-message">
+    <p>Edison discovered that when using bamboo as the filament, the bulb could burn for 1200 hours! The bamboo became
+      the standard filament for the next 10 years.</p>
+  </template>
 
-    <template class="work-impact">
-        <p>The 24 hours working time was possible since the light bulb became more popular and we became less dependent on the time of the day. The increase of the working hours had a huge impact in the economy since more working time meant more productivity for companies and more money flowing in the economy. Increased luminescence in the workplace helped make it easier for laborers to see potential workplace hazards, thus preventing accidents and making workplaces safer.</p>
-        <section class="factory-bank"></section>
-        <img src="" alt="">
-    </template>
+  <template class="work-impact">
+    <p>The 24 hours working time was possible since the light bulb became more popular and we became less dependent on
+      the time of the day. The increase of the working hours had a huge impact in the economy since more working time
+      meant more productivity for companies and more money flowing in the economy. Increased luminescence in the
+      workplace helped make it easier for laborers to see potential workplace hazards, thus preventing accidents and
+      making workplaces safer.</p>
+    <div class="work-impact-container">
+      <section class="factory-bank"></section>
+    </div>
+  </template>
 
-    <template class="lifestyle-impact">
-        <p>Many people found that increased nighttime luminosity made it possible to enjoy leisure activities late into the night.Candles and oil-based lamps were dangerous fire hazards, leading to many yearly deaths. The light bulb made for a safer nighttime home environment.</p>
-    </template>
+  <template class="lifestyle-impact">
+    <p>Many people found that increased nighttime luminosity made it possible to enjoy leisure activities late into the
+      night.Candles and oil-based lamps were dangerous fire hazards, leading to many yearly deaths. The light bulb made
+      for a safer nighttime home environment.</p>
+    <div class="lifestyle-container">
+      <section class="lifestyle-img"></section>
+    </div>
+  </template>
 
-    <template class="technology">
-        <p>In 1882 the world's first coal-fired public power station, the Edison Electric Light Station, was built in London, a project of Thomas Edison organized by Edward Johnson. In September 1882 in New York, the Pearl Street Station was established by Edison to provide electric lighting in the lower Manhattan Island area. Plugs and sockets for portable appliances started becoming available in the 1880s.</p>
-        <section class="power-plant"></section>
-        <img src="" alt="">
-    </template>
+  <template class="technology">
+    <p>In 1882 the world's first coal-fired public power station, the Edison Electric Light Station, was built in
+      London, a project of Thomas Edison organized by Edward Johnson. In September 1882 in New York, the Pearl Street
+      Station was established by Edison to provide electric lighting in the lower Manhattan Island area. Plugs and
+      sockets for portable appliances started becoming available in the 1880s.</p>
+    <div class="technology-container">
+      <section class="power-plant"></section>
+    </div>
 
-    <div onClick="history.go(0);" class="restart2">&#8634</div>
-  </body>
-  <script src="script.js"></script>
+  </template>
+
+  <div onClick="history.go(0);" class="restart2">&#8634</div>
+</body>
+<script src="script.js"></script>
+
 </html>
