fixed buttons positioning

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
         </div>
         <div class="next"> &#x21E8</div>
+        <div class="back"> &#x21E6</div>
        
       </div>
     </div>
