reverted branchRevert "house on fire animation"
This reverts commit e80abe2c5c86a8635d1f748a17aac9cbc536cb11.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       night.Candles and oil-based lamps were dangerous fire hazards, leading to many yearly deaths. The light bulb made
       for a safer nighttime home environment.</p>
     <div class="lifestyle-container">
-      <section class="house"></section>
+      <section class="lifestyle-img"></section>
     </div>
   </template>
 
