added house on fire animation again

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             made
             for a safer nighttime home environment.</p>
           <div class="lifestyle-container">
-            <section class="lifestyle-img"></section>
+            <section class="house"></section>
           </div>
         </template>
 
